Added headers to the sendEmailRequest. Added custom validator for the message ID and also the service logic that applies the headers to the email.
